tests/fixtures/invalid/pow_none_float_bytes.py
# Cannot call pow() with None, Float, Bytes
x = pow(None, 1.0, b"hello")
